# galaxy-rotation-reproducibility

./: .gitignore  README.md  critique_report.md  implementation_plan.md  pyproject.toml  report.md  requirements.txt
.github/workflows/: ci.yml
data/: checksums.txt  sparc_ngc2403.csv
scripts/: download_data.py  verify_checksums.py
src/: model_fit.py  preprocess.py
tests/: __init__.py  test_figure_error_handling.py  test_pipeline.py
