[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-rotation-reproducibility"
version = "1.0.0"
description = "A reviewer-ready reproducibility package for fitting the NFW dark matter halo to the NGC 2403 rotation curve."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Anthony Oxendine", email = "aoxendine3@github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scipy==1.12.0",
    "matplotlib==3.8.2",
    "astropy==5.3.4",
]
